--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-cayman
+name: AnyStatus
+description: Monitor the health, status and availability of services
+author: Alon Amsalem
