--- a/src/AnyStatus.Tests/AnyStatus.Tests.csproj
+++ b/src/AnyStatus.Tests/AnyStatus.Tests.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Commands\MoveUpCommandTests.cs" />
     <Compile Include="Commands\MoveDownCommandTests.cs" />
     <Compile Include="Commands\OpenInBrowserTests.cs" />
+    <Compile Include="Monitors\TfsBuildTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Commands\TestCommandTests.cs" />
     <Compile Include="Commands\RefreshCommandTests.cs" />
