--- a/src/AnyStatus/AnyStatus.csproj
+++ b/src/AnyStatus/AnyStatus.csproj
@@ -186,6 +186,7 @@
     <Compile Include="Features\Monitors\Coveralls.cs" />
     <Compile Include="Features\Monitors\PerformanceCounter.cs" />
     <Compile Include="Features\Monitors\CpuUsage.cs" />
+    <Compile Include="Features\Monitors\UDP.cs" />
     <Compile Include="Features\ToolWindow\ItemStyleSelector.cs" />
     <Compile Include="Features\ToolWindow\ItemTemplateSelector.cs" />
     <Compile Include="Infrastructure\Converters\HasTasksConverter.cs" />
