--- a/src/AnyStatus/AnyStatus.csproj
+++ b/src/AnyStatus/AnyStatus.csproj
@@ -183,10 +183,10 @@
     <Compile Include="Core\Commands\RefreshAllCommand.cs" />
     <Compile Include="Core\Commands\OptionsCommand.cs" />
     <Compile Include="Core\Commands\HelpCommand.cs" />
-    <Compile Include="Features\Monitors\Coveralls.cs" />
-    <Compile Include="Features\Monitors\PerformanceCounter.cs" />
-    <Compile Include="Features\Monitors\CpuUsage.cs" />
-    <Compile Include="Features\Monitors\UDP.cs" />
+    <Compile Include="Monitors\Coveralls.cs" />
+    <Compile Include="Monitors\PerformanceCounter.cs" />
+    <Compile Include="Monitors\CpuUsage.cs" />
+    <Compile Include="Monitors\UDP.cs" />
     <Compile Include="Features\ToolWindow\ItemStyleSelector.cs" />
     <Compile Include="Features\ToolWindow\ItemTemplateSelector.cs" />
     <Compile Include="Infrastructure\Converters\HasTasksConverter.cs" />
@@ -202,20 +202,20 @@
       <DependentUpon>EditWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Features\Edit\EditViewModel.cs" />
-    <Compile Include="Features\Monitors\AppVeyorBuild.cs" />
+    <Compile Include="Monitors\AppVeyorBuild.cs" />
     <Compile Include="Infrastructure\Converters\CanTriggerBuildConverter.cs" />
     <Compile Include="Infrastructure\Converters\CanOpenInBrowserConverter.cs" />
     <Compile Include="Infrastructure\Editors\FileEditor.cs" />
     <Compile Include="Infrastructure\Editors\PasswordEditor.cs" />
-    <Compile Include="Features\Monitors\BatchFile.cs" />
+    <Compile Include="Monitors\BatchFile.cs" />
     <Compile Include="Core\Interfaces\IScheduledItem.cs" />
-    <Compile Include="Features\Monitors\Dummy.cs" />
+    <Compile Include="Monitors\Dummy.cs" />
     <Compile Include="Core\Entities\State.cs" />
     <Compile Include="Core\Entities\RootItem.cs" />
-    <Compile Include="Features\Monitors\GitHubIssue.cs" />
-    <Compile Include="Features\Monitors\PowerShellScript.cs" />
+    <Compile Include="Monitors\GitHubIssue.cs" />
+    <Compile Include="Monitors\PowerShellScript.cs" />
     <Compile Include="Core\Entities\StateMetadata.cs" />
-    <Compile Include="Features\Monitors\TfsWorkItem.cs" />
+    <Compile Include="Monitors\TfsWorkItem.cs" />
     <Compile Include="Core\Entities\Theme.cs" />
     <Compile Include="Features\Options\UserInterface\UserInterfaceOptionsView.xaml.cs">
       <DependentUpon>UserInterfaceOptionsView.xaml</DependentUpon>
@@ -233,11 +233,11 @@
     <Compile Include="Infrastructure\TypeFinder.cs" />
     <Compile Include="Infrastructure\Enumeration.cs" />
     <Compile Include="Infrastructure\Extensions.cs" />
-    <Compile Include="Features\Monitors\TCP.cs" />
-    <Compile Include="Features\Monitors\TeamCityBuild.cs" />
-    <Compile Include="Features\Monitors\TfsBuild.cs" />
-    <Compile Include="Features\Monitors\WindowsService.cs" />
-    <Compile Include="Features\Monitors\TravisCIBuild.cs" />
+    <Compile Include="Monitors\TCP.cs" />
+    <Compile Include="Monitors\TeamCityBuild.cs" />
+    <Compile Include="Monitors\TfsBuild.cs" />
+    <Compile Include="Monitors\WindowsService.cs" />
+    <Compile Include="Monitors\TravisCIBuild.cs" />
     <Compile Include="Infrastructure\Controls\EditableTextBlock.cs" />
     <Compile Include="Core\AnalyticsReporter.cs" />
     <Compile Include="Core\Interfaces\IUsageReporter.cs" />
@@ -253,11 +253,11 @@
     <Compile Include="Core\Interfaces\ILogger.cs" />
     <Compile Include="Core\Entities\Folder.cs" />
     <Compile Include="Core\Interfaces\IHandler.cs" />
-    <Compile Include="Features\Monitors\Http.cs" />
+    <Compile Include="Monitors\Http.cs" />
     <Compile Include="Core\Entities\Item.cs" />
-    <Compile Include="Features\Monitors\JenkinsBuild.cs" />
-    <Compile Include="Features\Monitors\Ping.cs" />
-    <Compile Include="Features\Monitors\Template.cs" />
+    <Compile Include="Monitors\JenkinsBuild.cs" />
+    <Compile Include="Monitors\Ping.cs" />
+    <Compile Include="Monitors\Template.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
