detect configuration changes #22

--- a/src/AnyStatus.VSPackage/AnyStatus.VSPackage.csproj
+++ b/src/AnyStatus.VSPackage/AnyStatus.VSPackage.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Services\GeneralOptions.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Services\ConfigurationChangedInfoBar.cs" />
     <Compile Include="Services\InfoBarService.cs" />
     <Compile Include="Services\Logger.cs" />
     <Compile Include="Services\UserInterfaceOptions.cs">
