--- a/vs2017upgrade.yml
+++ b/vs2017upgrade.yml
@@ -1,4 +1,4 @@
-version: 0.13.{build}
+version: 1.0.{build}
 
 skip_commits:
   files:
@@ -7,7 +7,7 @@ skip_commits:
   
 branches:
   only:
-  - master
+  - VS2017Upgrade
 
 configuration: Release
 
@@ -28,7 +28,5 @@ build_script:
   - msbuild src\AnyStatus.sln /p:configuration=Release /p:DeployExtension=false /p:ZipPackageCompressionLevel=normal /v:m
 
 after_test:
-  - ps: Vsix-PushArtifacts | Vsix-PublishToGallery
   - cmd: src\packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -filter:"+[AnyStatus*]* -[AnyStatus.Tests]* -[AnyStatus.Integration.Tests]* -[FluentScheduler]*" -target:"C:\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE\MSTest.exe" -targetargs:"/testcontainer:src/AnyStatus.Tests/bin/Release/AnyStatus.Tests.dll /testcontainer:src/AnyStatus.Integration.Tests/bin/Release/AnyStatus.Integration.Tests.dll" -output:coverage.xml
   - cmd: src\packages\coveralls.io.1.3.4\tools\coveralls.net.exe --opencover coverage.xml
-
