--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,9 +27,12 @@ before_build:
   - ps: Vsix-IncrementVsixVersion | Vsix-UpdateBuildVersion
 
 build_script:
-  - msbuild src\AnyStatus.sln /p:configuration=Release /p:DeployExtension=false /p:ZipPackageCompressionLevel=normal /v:m
+  - msbuild src\AnyStatus.sln /p:configuration=$(configuration) /p:DeployExtension=false /p:ZipPackageCompressionLevel=normal /v:m
 
-after_test:
-  - cmd: src\packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -filter:"+[AnyStatus*]* -[AnyStatus.Tests]* -[AnyStatus.Integration.Tests]* -[FluentScheduler]*" -target:"C:\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE\MSTest.exe" -targetargs:"/testcontainer:src/AnyStatus.Tests/bin/Release/AnyStatus.Tests.dll /testcontainer:src/AnyStatus.Integration.Tests/bin/Release/AnyStatus.Integration.Tests.dll" -output:coverage.xml
-  - cmd: src\packages\coveralls.io.1.3.4\tools\coveralls.net.exe --opencover coverage.xml
-  - ps: Vsix-PushArtifacts | Vsix-PublishToGallery
+#after_test:
+# - cmd: src\packages\coveralls.io.1.3.4\tools\coveralls.net.exe --opencover coverage.xml
+# - ps: Vsix-PushArtifacts | Vsix-PublishToGallery
+# - cmd: src\packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -filter:"+[AnyStatus*]* -[AnyStatus.Tests]* -[AnyStatus.Integration.Tests]* -[FluentScheduler]*" -target:"C:\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE\MSTest.exe" -targetargs:"/testcontainer:src/AnyStatus.Tests/bin/$(configuration)/AnyStatus.Tests.dll /testcontainer:src/AnyStatus.Integration.Tests/bin/$(configuration)/AnyStatus.Integration.Tests.dll" -output:coverage.xml
+
+  test_script:
+	- vstest.console /logger:Appveyor ".\src\AnyStatus.Integration.Tests\bin\$(configuration)\AnyStatus.Integration.Tests.dll" ".\src\AnyStatus.Tests\bin\$(configuration)\AnyStatus.Tests.dll"
