--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,10 +29,14 @@ before_build:
 build_script:
   - msbuild src\AnyStatus.sln /p:configuration=Release /p:DeployExtension=false /p:ZipPackageCompressionLevel=normal /v:m
 
-# after_test:
-# - cmd: src\packages\coveralls.io.1.3.4\tools\coveralls.net.exe --opencover coverage.xml
-# - ps: Vsix-PushArtifacts | Vsix-PublishToGallery
-# - cmd: src\packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -filter:"+[AnyStatus*]* -[AnyStatus.Tests]* -[AnyStatus.Integration.Tests]* -[FluentScheduler]*" -target:"C:\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE\MSTest.exe" -targetargs:"/testcontainer:src/AnyStatus.Tests/bin/Release/AnyStatus.Tests.dll /testcontainer:src/AnyStatus.Integration.Tests/bin/Release/AnyStatus.Integration.Tests.dll" -output:coverage.xml
+test:
+	assemblies:
+		- AnyStatus.Tests.dll
 
-test_script:
-- vstest.console /logger:Appveyor ".\src\AnyStatus.Tests\bin\Release\AnyStatus.Tests.dll"
+after_test:
+#	- cmd: src\packages\coveralls.io.1.3.4\tools\coveralls.net.exe --opencover coverage.xml
+#	- cmd: src\packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -filter:"+[AnyStatus*]* -[AnyStatus.Tests]* -[AnyStatus.Integration.Tests]* -[FluentScheduler]*" -target:"C:\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE\MSTest.exe" -targetargs:"/testcontainer:src/AnyStatus.Tests/bin/Release/AnyStatus.Tests.dll /testcontainer:src/AnyStatus.Integration.Tests/bin/Release/AnyStatus.Integration.Tests.dll" -output:coverage.xml
+	- ps: Vsix-PushArtifacts | Vsix-PublishToGallery
+
+# test_script:
+# - vstest.console /logger:Appveyor ".\src\AnyStatus.Tests\bin\Release\AnyStatus.Tests.dll"
