--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,9 +34,10 @@ test:
   - AnyStatus.Tests.dll
 
 after_test:
- - cmd: src\packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -filter:"+[AnyStatus*]* -[AnyStatus.Tests]* -[AnyStatus.Integration.Tests]* -[FluentScheduler]*" -target:"vstest.console.exe" -targetargs:"/testcontainer:src/AnyStatus.Tests/bin/Release/AnyStatus.Tests.dll /testcontainer:src/AnyStatus.Integration.Tests/bin/Release/AnyStatus.Integration.Tests.dll" -output:coverage.xml
+ - cmd: src\packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -filter:"+[AnyStatus*]* -[AnyStatus.Tests]* -[AnyStatus.Integration.Tests]* -[FluentScheduler]*" -target:"vstest.console.exe" -targetargs:"C:\projects\anystatus\src\AnyStatus.Tests\bin\Release\AnyStatus.Tests.dll" -output:coverage.xml
  - cmd: src\packages\coveralls.io.1.3.4\tools\coveralls.net.exe --opencover coverage.xml
  - ps: Vsix-PushArtifacts | Vsix-PublishToGallery
+ # - cmd: src\packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -filter:"+[AnyStatus*]* -[AnyStatus.Tests]* -[AnyStatus.Integration.Tests]* -[FluentScheduler]*" -target:"vstest.console.exe" -targetargs:"C:\projects\anystatus\src\AnyStatus.Integration.Tests\bin\Release\AnyStatus.Integration.Tests.dll" -output:coverage.xml -mergeoutput
 
 artifacts:
  - path: src\AnyStatus.VSPackage\bin\Release\AnyStatus.vsix
